# inde577

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: tests.yml
data/: lesions_processed.csv  tampered_labels_exp1.csv  tampered_labels_exp2.csv
examples/Data Exploration/: README.md
examples/Supervised_Learning/: README.md
examples/Supervised_Learning/Decision_Trees/: Decision_Trees.ipynb  README.md
examples/Supervised_Learning/Distance_Metrics/: DistanceMetrics.ipynb  README.md
examples/Supervised_Learning/Ensemble_Methods/: Ensemble_Methods.ipynb  README.md
examples/Supervised_Learning/K_Nearest_Neighbors/: README.md
examples/Supervised_Learning/Linear_Regression/: Linear_Regression.ipynb  README.md
examples/Supervised_Learning/Logistic_Regression/: Logistic_Regression.ipynb  README.md
examples/Supervised_Learning/Multilayer_Perceptron/: Multilayer_Perceptron.ipynb  README.md
examples/Supervised_Learning/Perceptron/: README.md
examples/Unsupervised_Learning/: README.md
notebooks/: 01_EDA.ipynb  03_KNN.ipynb  04_KMeans.ipynb  05_DBSCAN.ipynb  11_Perceptron.ipynb  14_CommunityDetect.ipynb
src/: README.md
src/rice_ml/: __init__.py
tests/unit/: test_community_detection.py  test_dbscan.py  test_decision_tree.py  test_distances.py  test_ensemble_methods.py  test_kmeans.py  test_knn.py  test_linear_regression.py  test_logistics_regression.py  test_mlp.py  test_pca.py  test_perceptron.py  test_post_processing.py  test_preprocessing.py  test_regression_tree.py
(+26 files in other folders)
