[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rice_ml"
version = "0.1.0"
description = "An example Python project using pyproject.toml"
authors = [{ name = "Randy R. Davila", email = "randyrdavila@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["numpy", "matplotlib", "seaborn", "pandas", "requests"]

[project.optional-dependencies]
dev = ["pytest"]

# >>> These two lines make the src/ layout unambiguous <<<
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

# [tool.pytest.ini_options]
# minversion = "6.0"
# addopts = "-ra -q"
# testpaths = ["tests"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]
testpaths = ["src/rice_ml/supervised_learning", "tests"]
